added elastic search and get node functionality
